...
            let currLabel = outputLabel.text
            return (currLabel?.components(separatedBy: ",").joined(separator: ""))!
        }
        return runningNumber
    }

    override var outputLabelAccessibilityIdentifier: String { "Decimal Output Label" }
    override var defaultLabelValue: String { "0" }

    override func updateThemeColour(_ colour: UIColor) {
        PLUSBtn.backgroundColor = colour
        SUBBtn.backgroundColor = colour
        MULTBtn.backgroundColor = colour
...
